# Home_Server

./: CMakeLists.txt  README.md  main.cpp  main.py
helper/: comand.txt
